[gd_scene load_steps=2 format=3 uid="uid://cpbg8qcap15kw"]

[ext_resource type="Script" path="res://addons/shape_editor/shape_editor.gd" id="1_bs1u5"]

[node name="ShapeEditor" type="VBoxContainer"]
script = ExtResource("1_bs1u5")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Shape Name"

[node name="ShapeName" type="LineEdit" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Offset X"

[node name="OffsetX" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Offset Y"

[node name="OffsetY" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = "Tile Grid"

[node name="TileGrid" type="GridContainer" parent="."]
layout_mode = 2
columns = 5

[node name="SaveButton" type="Button" parent="."]
layout_mode = 2
text = "Save Shape"
